Fixed mobile navbar top spacing issue ↕

--- a/style.css
+++ b/style.css
@@ -828,7 +828,6 @@ select::-ms-expand {
   z-index: 100;
   width: 100%;
   background-color: #6C63FF;
-  transition: 0.7s;
 }
 
 #wpadminbar + #page header {
